# Parser_Trading_Data

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: twse_data_CSV_writter.h  twse_data_format.h  twse_data_parser.h  utilities.h
src/: twse_data_CSV_writter.cc  twse_data_CSV_writter.h  twse_data_format.cc  twse_data_format.h  twse_data_parser.cc  twse_data_parser.h  utilities.cc  utilities.h
